pdbmap.err
  File "./pdbmap.py", line 27
    "force" : False
          ^
SyntaxError: invalid syntax
